# Multifile

./: .gitignore  README.md  build.sh  run_tests.sh
projects/: .gitignore  CMakeLists.txt
projects/Insertion_sort/: CMakeLists.txt  main.cpp  run_insertion_sort.sh
projects/Shell_sort/: CMakeLists.txt  main.cpp  run_shell_sort.sh  shel_sort.cpp  shel_sort.hpp  shell_sort.cpp  shell_sort.hpp
projects/base_theory_p1/: CMakeLists.txt  main.cpp  run_base_theory_p1.sh
projects/base_theory_p1_tasks_p1/: CMakeLists.txt  main.cpp  run_base_theory_tasks_p1.sh
projects/base_theory_tasks_p1/: run_base_theory_tasks_p1.sh
projects/bubble_sort/: CMakeLists.txt  main.cpp  run_bubble_sort.sh
projects/bubble_sort_mf/: CMakeLists.txt  main.cpp  run_bubble_sort.sh
projects/bubble_sort_mf/sortings/: CMakeLists.txt
projects/obuchaika/: CMakeLists.txt  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp  run_obuchaika.sh
projects/refactoring_and_print/: CMakeLists.txt  intial_code  main.cpp  run_refactoring_and_print.sh
projects/unit_test_example/: CMakeLists.txt
projects/unit_test_example/src/: CMakeLists.txt  bubble_sort.cpp  bubble_sort.hpp
projects/unit_test_example/test/: CMakeLists.txt  test_bubble.cpp
projects/unit_test_insertion_sort/: CMakeLists.txt
projects/unit_test_insertion_sort/src/: CMakeLists.txt  insertion_sort.cpp  insertion_sort.hpp
projects/unit_test_insertion_sort/test/: CMakeLists.txt  test_insertion.cpp
projects/unit_test_shell/: CMakeLists.txt
projects/unit_test_shell/src/: CMakeLists.txt  (+2 more)
(+2 files in other folders)
